# selenium-web-automation-utils

./: .gitignore  CHANGELOG.md  LICENSE  README.md  logging_utils.py  publish.sh  pyproject.toml  requirements.txt  selenium_utils.py  setup.py
.github/workflows/: tests.yml
examples/: automation_example.py  scrape_example.py
selenium_web_automation_utils/: compatibility.py  logging_listener.py  logging_utils.py  selenium_utils.py
tests/: conftest.py  test_selenium_utils.py
