[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selenium-web-automation-utils"
version = "0.1.1"
description = "A lightweight Selenium automation utility package."
readme = "README.md"
authors = [
    {name = "Kanad Rishiraj (RoamingSaint)", email = "roamingsaint27@gmail.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dependencies = [
    "selenium"
]

[project.optional-dependencies]
color = ["colorfulPyPrint"]

[project.urls]
"Homepage" = "https://github.com/roamingsaint/selenium-web-automation-utils"
"Repository" = "https://github.com/roamingsaint/selenium-web-automation-utils"
"Bug Tracker" = "https://github.com/roamingsaint/selenium-web-automation-utils/issues"

[tool.setuptools]
packages = ["selenium_web_automation_utils"]
